Create SignIn screen - CAS-41

--- a/app/src/main/res/layout/edit_text_base_layout.xml
+++ b/app/src/main/res/layout/edit_text_base_layout.xml
@@ -19,7 +19,8 @@
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Label" />
+            tools:text="Label"
+            tools:visibility="visible" />
 
         <com.wolfpackdigital.cashli.shared.utils.views.CustomTextInputEditText
             android:id="@+id/tiet_content"
