--- a/app/src/main/res/layout/fr_choose_password.xml
+++ b/app/src/main/res/layout/fr_choose_password.xml
@@ -51,7 +51,8 @@
             android:layout_marginTop="@dimen/dimen_40dp"
             app:cliDrawableEnd="@{viewModel.isPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
             app:cliDrawableEndClick="@{viewModel::onPasswordVisibilityChange}"
-            app:cliErrorNoText="@{viewModel.passwordError != null}"
+            app:cliError="@{viewModel.passwordError}"
+            app:cliShowTextError="@{false}"
             app:cliHint="@{@string/et_hint}"
             app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
             app:cliInputType="@{viewModel.isPasswordVisible ? InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD}"
