--- a/app/src/main/res/layout/fr_phone_number.xml
+++ b/app/src/main/res/layout/fr_phone_number.xml
@@ -48,6 +48,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_question"
             app:onCloseKeyboard="@{viewModel::closeKeyboardAndClearFocus}"
+            app:fadeVisibility="@{null}"
             app:phoneNumber="@{viewModel.phoneNumber}" />
 
         <com.google.android.material.button.MaterialButton
