--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">@dimen/dimen_48dp</item>
         <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:letterSpacing">0.0</item>
     </style>
 
     <style name="Widget.Cashli.Button.Primary.Language">
@@ -57,6 +58,7 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textAllCaps">false</item>
         <item name="rippleColor">@null</item>
+        <item name="android:letterSpacing">0.0</item>
     </style>
 
     <style name="ButtonTheme" />
