--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,10 @@
     <color name="colorAccent">#E060D3</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorWhiteF9">#F6F6F9</color>
     <color name="colorWhiteF5">#F0EDF5</color>
     <color name="colorGrayF4">#DFDFF4</color>
+    <color name="colorGrayEB">#DDD6EB</color>
     <color name="colorGrayDC">#C2C2DC</color>
     <color name="colorGrayB6">#9F9FB6</color>
     <color name="colorGray76">#5F6076</color>
