--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!--  NEGATIVE DP -->
     <dimen name="dimen_negative_48dp">-48dp</dimen>
@@ -32,4 +32,8 @@
     <dimen name="size_24sp">24sp</dimen>
     <dimen name="size_28sp">28sp</dimen>
     <dimen name="size_34sp">34sp</dimen>
+
+    <dimen name="design_bottom_navigation_height" tools:ignore="UnusedResources" tools:override="true">
+        64dp
+    </dimen>
 </resources>
