Refactor fadeVisibility binding adapter

--- a/app/src/main/res/layout/fr_signin.xml
+++ b/app/src/main/res/layout/fr_signin.xml
@@ -7,6 +7,8 @@
 
         <import type="android.text.InputType" />
 
+        <import type="android.view.View" />
+
         <import type="com.wolfpackdigital.cashli.shared.utils.Constants" />
 
         <import type="android.view.inputmethod.EditorInfo" />
@@ -54,13 +56,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_negative_48dp"
                 app:error="@{viewModel.error}"
-                app:fadeVisibility="@{!viewModel.isEmailCredentialsInUse}"
                 app:imeOption="@{EditorInfo.IME_ACTION_NEXT}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_top"
                 app:onCloseKeyboard="@{viewModel::closeKeyboardAndClearFocus}"
                 app:phoneNumber="@{viewModel.phoneNumber}"
-                app:showTextError="@{false}" />
+                app:showTextError="@{false}"
+                app:viewState="@{viewModel.isEmailCredentialsInUse ? View.GONE : View.VISIBLE}" />
 
             <com.wolfpackdigital.cashli.shared.utils.views.BaseEditText
                 android:id="@+id/et_email"
@@ -69,6 +71,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_negative_48dp"
                 android:paddingBottom="@dimen/dimen_4dp"
+                android:visibility="gone"
                 app:cliError="@{viewModel.error}"
                 app:cliHint="@{@string/et_hint}"
                 app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
@@ -77,10 +80,10 @@
                 app:cliMaxChars="@{Constants.MAX_CHARS_50}"
                 app:cliShowTextError="@{false}"
                 app:cliText="@={viewModel.email}"
-                app:fadeVisibility="@{viewModel.isEmailCredentialsInUse}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_top" />
+                app:layout_constraintTop_toBottomOf="@id/iv_top"
+                app:viewState="@{viewModel.isEmailCredentialsInUse ? View.VISIBLE : View.GONE}" />
 
             <androidx.constraintlayout.widget.Barrier
                 android:id="@+id/barrier_phone_email_credentials"
