--- a/app/src/main/res/layout/fr_phone_number.xml
+++ b/app/src/main/res/layout/fr_phone_number.xml
@@ -48,8 +48,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_question"
             app:onCloseKeyboard="@{viewModel::closeKeyboardAndClearFocus}"
-            app:fadeVisibility="@{null}"
-            app:phoneNumber="@{viewModel.phoneNumber}" />
+            app:phoneNumber="@{viewModel.phoneNumber}"
+            app:viewState="@{null}" />
 
         <com.google.android.material.button.MaterialButton
             style="@style/Widget.Cashli.Button.Accent"
