Implemented confirm one time password screen & almost implemented reset password screen

--- a/app/src/main/res/layout/fr_confirm_one_time_password.xml
+++ b/app/src/main/res/layout/fr_confirm_one_time_password.xml
@@ -62,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_32dp"
             android:enabled="@{viewModel.timerResendEnabled}"
+            android:onClick="@{() -> viewModel.resendConfirmationCodeAndStartTimer()}"
             android:padding="@dimen/dimen_16dp"
             android:text="@{viewModel.timerResendCounter == null ? @string/resend_code : @string/resend_code_counter(viewModel.timerResendCounter)}"
             android:textColor="@color/text_gray_selector"
