--- a/app/src/main/res/layout/fr_reset_password.xml
+++ b/app/src/main/res/layout/fr_reset_password.xml
@@ -85,6 +85,7 @@
             android:layout_marginStart="@dimen/dimen_24dp"
             android:layout_marginEnd="@dimen/dimen_24dp"
             android:layout_marginBottom="@dimen/dimen_24dp"
+            android:enabled="@{viewModel.isConfirmEnabled()}"
             android:onClick="@{()-> viewModel.onConfirmClicked()}"
             android:text="@string/generic_confirm"
             app:layout_constraintBottom_toBottomOf="parent"
