--- a/app/src/main/res/layout/fr_request_code.xml
+++ b/app/src/main/res/layout/fr_request_code.xml
@@ -39,6 +39,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_28dp"
+            android:layout_marginTop="@dimen/dimen_4dp"
             android:layout_marginEnd="@dimen/dimen_68dp"
             android:lineSpacingExtra="@dimen/dimen_4dp"
             android:text="@string/forgot_password_screen_message"
