--- a/app/src/main/res/layout/fr_informative.xml
+++ b/app/src/main/res/layout/fr_informative.xml
@@ -26,8 +26,9 @@
         <include
             android:id="@+id/layout_message_one"
             layout="@layout/check_image_with_text_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_24dp"
             android:layout_marginBottom="@dimen/dimen_20dp"
             app:hidden="@{false}"
             app:layout_constraintBottom_toTopOf="@id/layout_message_two"
@@ -38,10 +39,9 @@
         <include
             android:id="@+id/layout_message_two"
             layout="@layout/check_image_with_text_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_28dp"
-            android:layout_marginEnd="@dimen/dimen_32dp"
+            android:layout_marginHorizontal="@dimen/dimen_24dp"
             android:layout_marginBottom="@dimen/dimen_28dp"
             app:hidden="@{false}"
             app:layout_constraintBottom_toTopOf="@id/divider"
@@ -52,8 +52,9 @@
         <include
             android:id="@+id/layout_message_three"
             layout="@layout/check_image_with_text_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dimen_24dp"
             android:layout_marginTop="@dimen/dimen_28dp"
             app:hidden="@{true}"
             app:layout_constraintEnd_toEndOf="parent"
