--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:paddingTop="@dimen/dimen_12dp"
+            android:paddingTop="@dimen/dimen_8dp"
+            app:itemPaddingTop="@dimen/dimen_4dp"
             android:paddingBottom="@dimen/dimen_8dp"
             app:itemIconTintList="@{null}"
             app:labelVisibilityMode="labeled"
