--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -5,9 +5,16 @@
     android:id="@+id/home_graph"
     app:startDestination="@id/homeFragment">
 
+    <action
+        android:id="@+id/action_global_linkAccountGraph"
+        app:destination="@id/link_account_graph" />
+
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.wolfpackdigital.cashli.presentation.home.HomeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fr_home" />
+
+    <include app:graph="@navigation/link_account_graph" />
+
 </navigation>
