--- a/app/src/main/res/layout/fr_confirm_one_time_password.xml
+++ b/app/src/main/res/layout/fr_confirm_one_time_password.xml
@@ -53,7 +53,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_confirm_title"
-            app:onCliImeDoneAction="@{viewModel.closeKeyboardAndClearFocus}" />
+            app:onCliImeDoneAction="@{viewModel::closeKeyboardAndClearFocus}" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_resend_code"
@@ -79,6 +79,7 @@
             android:layout_marginStart="@dimen/dimen_24dp"
             android:layout_marginEnd="@dimen/dimen_24dp"
             android:layout_marginBottom="@dimen/dimen_24dp"
+            android:enabled="@{viewModel.codeValidateButtonEnabled}"
             android:onClick="@{()-> viewModel.onContinueClicked()}"
             android:text="@string/continue_name"
             app:layout_constraintBottom_toBottomOf="parent"
