Finish sign up flow

--- a/app/src/main/res/layout/phone_number_input_layout.xml
+++ b/app/src/main/res/layout/phone_number_input_layout.xml
@@ -24,7 +24,7 @@
 
         <variable
             name="error"
-            type="Integer" />
+            type="Object" />
 
         <variable
             name="phoneNumber"
