--- a/app/src/main/res/layout/fr_validate_code.xml
+++ b/app/src/main/res/layout/fr_validate_code.xml
@@ -65,8 +65,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_32dp"
-            android:enabled="@{viewModel.timerResendEnabled}"
-            android:onClick="@{() -> viewModel.resendConfirmationCodeAndStartTimer()}"
+            android:enabled="@{viewModel.timerResendEnabled &amp;&amp; viewModel.buttonsEnabled}"
+            android:onClick="@{() -> viewModel.onResendConfirmationCodeClicked()}"
             android:padding="@dimen/dimen_16dp"
             android:text="@{viewModel.timerResendCounter == null ? @string/resend_code : @string/resend_code_counter(viewModel.timerResendCounter)}"
             android:textColor="@color/text_gray_selector"
@@ -82,8 +82,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_28dp"
             android:layout_marginBottom="@dimen/dimen_8dp"
-            android:enabled="@{viewModel.codeValidateButtonEnabled}"
-            android:onClick="@{() -> viewModel.validateCode()}"
+            android:enabled="@{viewModel.codeValidateButtonEnabled &amp;&amp; viewModel.buttonsEnabled}"
+            android:onClick="@{() -> viewModel.onContinueClicked()}"
             android:text="@string/generic_continue"
             app:layout_constraintBottom_toTopOf="@+id/btn_get_support"
             app:layout_constraintEnd_toEndOf="parent"
